--- a/dinishootz/main.css
+++ b/dinishootz/main.css
@@ -30,10 +30,88 @@ body{
     margin: 0 auto;
 }
 
+/*---- NAV ----*/
+
+nav{
+	height: 90px;
+	line-height: 90px;
+}
+
+nav a{
+	text-decoration: none;
+}
+
+nav img{
+	vertical-align: middle;
+}
+
+nav a:nth-child(2){
+	width: 50px;
+	height: auto;
+	float: right;
+}
+
 /*---- HEADER ----*/
 
-/*---- mainWork ----*/
+header{
+	text-align: center;
+}
 
-/*---- Work ----*/
+header p{
+	width: 45%;
+	margin: 30px auto 0 auto;
+}
+
+header a{
+	color: #ff4a50;
+	text-transform: uppercase;
+	text-decoration: none;
+}
+
+/*---- montra ----*/
+
+.montra{
+	width: 100%;
+	text-align: center;
+}
+
+.montra a img{
+	margin: 1%;
+	width: 92%;
+}
+
+/*---- oQueFazemos ----*/
+
+.oQueFazemos {
+	text-align: center;
+	position: relative;
+	margin: 100px 0 200px 0;
+}
+
+.somos{
+	color: #ff4a50;
+	font-size: 10em;
+}
+
+/*---- trabalhos ----*/
+
+.trabalhos{
+	text-align: center;
+	width: 100%;
+}
+
+.trabalhos a img{
+	margin: 1%;
+	width: 45%;
+}
 
 /*---- FOOTER ----*/
+
+footer{
+	text-align: center;
+	margin: 60px 0;
+}
+
+footer p{ 
+	color: #ff4a50;
+}
